# audio-player

./: Cargo.toml
src/: audio.rs  cpal.rs  main.rs
src/cpal/: configuration.rs  mod.rs
src/pulse/: configuration.rs
